--- a/src/Qa6185.Web/Pages/MyEntities/Index.cshtml
+++ b/src/Qa6185.Web/Pages/MyEntities/Index.cshtml
@@ -41,6 +41,7 @@
 @*//<suite-custom-code-block-4>*@
 @*//</suite-custom-code-block-4>*@
 
+<abp-input asp-for="Id"></abp-input>
 <abp-card>
     <abp-card-body>
 		<abp-row class="mb-3">
